添加拆装箱单元测试